--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,26 @@ on:
     branches: [main]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.3'
+          bundler-cache: true
+
+      - name: Run RuboCop
+        run: bundle exec rubocop
+
   test:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        ruby-version: ['3.0', '3.1', '3.2', '3.3', '4.0']
+        ruby-version: ['3.0', '3.1', '3.2', '3.3']
 
     steps:
       - uses: actions/checkout@v4
@@ -26,8 +40,12 @@ jobs:
       - name: Run tests
         run: bundle exec rake test
 
-      - name: Run RuboCop
-        run: bundle exec rubocop
+      - name: Upload coverage to Codecov
+        if: matrix.ruby-version == '3.3'
+        uses: codecov/codecov-action@v4
+        with:
+          files: coverage/.resultset.json
+          fail_ci_if_error: false
 
   security:
     runs-on: ubuntu-latest
